--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -543,7 +543,7 @@
               "objectDestructuring": true,
               "parameter": true,
               "propertyDeclaration": true,
-              "variableDeclaration": false,
+              "variableDeclaration": true,
               "variableDeclarationIgnoreFunction": true
             }
           ],
